--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -35,15 +44,20 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-
 			<!-- Frontend -->
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
 				<version>1.8.0</version>
 				<configuration>
+					<!-- Node version (comes with npm) -->
 					<nodeVersion>v12.7.0</nodeVersion>
+					
+					<!-- From where to run npm -->
 					<workingDirectory>src/main/frontend</workingDirectory>
+					
+					<!-- Where to install node (and npm) -->
+					<installDirectory>${project.basedir}</installDirectory>
 				</configuration>
 				<executions>
 					<execution>
